--- a/gui/gui.vcxproj.filters
+++ b/gui/gui.vcxproj.filters
@@ -3,8 +3,10 @@
   <ItemGroup>
     <ClCompile Include="gui.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="text.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gui.hpp" />
+    <ClInclude Include="text.hpp" />
   </ItemGroup>
 </Project>
