--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -1,21 +1,20 @@
 cmake_minimum_required(VERSION 3.21)
-project(CMakeSFMLProject LANGUAGES CXX)
 
 include(FetchContent)
 FetchContent_Declare(SFML
-    GIT_REPOSITORY https://github.com/SFML/SFML.git
-    GIT_TAG 2.6.x)
-#FetchContent_MakeAvailable(SFML)
+    GIT_REPOSITORY https://github.com/PupperGump/SFML.git
+    GIT_TAG puppergump_master)
+FetchContent_MakeAvailable(SFML)
 
-add_executable(CMakeSFMLProject main.cpp gui.cpp gui.hpp ${SFML_SOURCES})
+add_executable(${PROJECT_NAME} main.cpp gui.cpp gui.hpp ${SFML_SOURCES})
 
-target_include_directories(CMakeSFMLProject PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/gui/SFML/include/SFML)
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/gui/SFML/include)
 
-target_link_libraries(CMakeSFMLProject PRIVATE sfml-graphics sfml-window)
-target_compile_features(CMakeSFMLProject PRIVATE cxx_std_17)
+target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics sfml-window)
+
 if (WIN32 AND BUILD_SHARED_LIBS)
-    add_custom_command(TARGET CMakeSFMLProject POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:CMakeSFMLProject> $<TARGET_FILE_DIR:CMakeSFMLProject> COMMAND_EXPAND_LISTS)
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:${PROJECT_NAME}> $<TARGET_FILE_DIR:${PROJECT_NAME}> COMMAND_EXPAND_LISTS)
 endif()
 
-install(TARGETS CMakeSFMLProject)
+install(TARGETS ${PROJECT_NAME})
