Changed solution I work with

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.21)
 
 # Set the project name
 
-project(gui2 LANGUAGES CXX)
+project(gui LANGUAGES CXX)
 
 
 include(FetchContent)
